--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
     compile 'org.springframework.data:spring-data-jpa:1.7.2.RELEASE'
     compile 'org.hibernate:hibernate-entitymanager:4.3.8.Final'
     compile 'org.hibernate:hibernate-core:4.3.8.Final'
+    compile 'com.sun.jersey:jersey-client:1.9.1'
+    compile 'org.json:json:20090211'
+
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 
     //mysql connector
     compile 'mysql:mysql-connector-java:5.1.34'
