--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'idea'
-
+apply plugin: 'findbugs'
 // Uses JDK 7
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
