--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     compile 'org.hibernate:hibernate-core:4.3.8.Final'
     compile 'com.sun.jersey:jersey-client:1.9.1'
     compile 'org.json:json:20090211'
+    compile 'com.netflix.hystrix:hystrix-core:1.4.5'
+    compile 'com.netflix.hystrix:hystrix-metrics-event-stream:1.1.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
